# server/docs/v1_openapi.yaml
@@ -66,6 +66,7 @@ components:
 
       required:
         - success
+        - message
 
       properties:
         success:
@@ -1771,6 +1772,34 @@ paths:
               schema:
                 $ref: '#/components/schemas/SuccessResponse'
 
+  /collaborations/{id}/member/{memberId}:
+    delete:
+      tags:
+        - Memberships
+
+      summary: Remove Member from Collaboration
+
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+
+        - name: memberId
+          in: path
+          required: true
+          schema:
+            type: string
+
+      responses:
+        '200':
+          description: Member Removed
+
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SuccessResponse'
   #################################################
   # CHAT
   #################################################
