# server/src/types/api.ts
@@ -904,6 +904,45 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/collaborations/{id}/member/{memberId}": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get?: never;
+        put?: never;
+        post?: never;
+        /** Remove Member from Collaboration */
+        delete: {
+            parameters: {
+                query?: never;
+                header?: never;
+                path: {
+                    id: string;
+                    memberId: string;
+                };
+                cookie?: never;
+            };
+            requestBody?: never;
+            responses: {
+                /** @description Member Removed */
+                200: {
+                    headers: {
+                        [name: string]: unknown;
+                    };
+                    content: {
+                        "application/json": components["schemas"]["SuccessResponse"];
+                    };
+                };
+            };
+        };
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/chat/rooms": {
         parameters: {
             query?: never;
@@ -1388,7 +1427,7 @@ export interface components {
             /** @example true */
             success: boolean;
             /** @example Operation successful */
-            message?: string;
+            message: string;
         };
         PaginationMeta: {
             /** @example 1 */
